--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <header class="header" id="header">
             <nav class="nav container">
                 <a href="#" class="nav__logo">
-                    <i class='bx bxs-watch nav__logo-icon'></i> Rolex
+                    <img src="assets/img/rolex.svg">
                 </a>
 
                 <div class="nav__menu" id="nav-menu">
