--- a/index.html
+++ b/index.html
@@ -333,6 +333,16 @@
                             <i class='bx bx-shopping-bag'></i>
                         </button>
                     </article>
+                   <article class="products__card">
+                        <img src="assets/img/new4.png" alt="" class="products__img">
+
+                        <h3 class="products__title">Portuguese rose</h3>
+                        <span class="products__price">$1590</span>
+
+                        <button class="products__button">
+                            <i class='bx bx-shopping-bag'></i>
+                        </button>
+                    </article>
                 </div>
             </section>
 
